--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/FranklinCedar92/EmpyTracky#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "inquirer": "^8.2.1"
+    "inquirer": "^8.2.1",
+    "mysql2": "^2.3.3"
   }
 }
